--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <h2>BUT Technique de Commercialisation</h2>
                             <h4>IUT Montpellier-Sète, Universitéde Montpellier, France</h4>
                             <p>
-                                Parcours marketing digital, e-business et entreprnariat
+                                Parcours marketing digital, e-business et entrepreneuriat
                             </p>
                         </div>
                     </div>
